--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "bundle.js",
   "scripts": {
-    "dev": "webpack-dev-server --config ./config/webpack.config.dev.js",
+    "dev": "webpack-dev-server --host 0.0.0.0 --config ./config/webpack.config.dev.js",
     "build": "webpack --config ./config/webpack.client.config.js",
     "fix": "run-s fix:prettier fix:eslint",
     "lint": "run-s lint:prettier lint:eslint",
@@ -20,6 +20,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.12",
+    "@types/js-cookie": "^3.0.2",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
@@ -40,8 +41,24 @@
     "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/base": "^5.0.0-alpha.80",
+    "@mui/icons-material": "^5.8.0",
+    "@mui/lab": "^5.0.0-alpha.83",
+    "@mui/material": "^5.7.0",
+    "@mui/x-data-grid": "^5.11.0",
+    "axios": "^0.27.2",
+    "bootstrap": "^3.4.1",
     "cors": "^2.8.5",
+    "date-fns": "^2.28.0",
+    "dayjs": "^1.11.2",
+    "js-cookie": "^3.0.1",
+    "mysql": "^2.18.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-addons-update": "^15.6.3",
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0"
   }
 }
