--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/base": "^5.0.0-alpha.80",
@@ -51,7 +52,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^3.4.1",
     "cors": "^2.8.5",
-    "date-fns": "^2.28.0",
+    "date-fns": "^2.29.2",
     "dayjs": "^1.11.2",
     "js-cookie": "^3.0.1",
     "mysql": "^2.18.1",
